# AutomaticBankaccountConfirmation

./: .gitignore  README.md  build_exe.bat  pyproject.toml  배포안내.md
afc/: __init__.py  excel_writer.py  extract.py  gui.py  institutions.py  make_sample_pbc.py  output.py  paths.py  pbc.py  pdf_inventory.py  reconciliation.py  run.py  schema.py  sections.py  tables.py
afc/evaluation/: __init__.py  diff_xlsx.py
configs/: account_mapping.yaml  institutions.yaml  sections.yaml
tests/: test_extract.py  test_pbc.py  test_reconciliation.py  test_sections.py  test_tables.py
